--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@ html {
     --background-panel: #EEEEEE;/*box container*/
     --color-headings: #00ADB5;/*heading*/
     --color-text: #393e46;/*paragraph*/
+    --blur-strength: 50px;
 }
 
 html[ui-theme='dark'] {
@@ -23,13 +24,72 @@ html[ui-theme='special'] {
 * {
     color: var(--color-text);
     font-family: "Poppins", sans-serif;
-    overflow: hidden;
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
 body {
     background-color: var(--background);
+    background: url('https://live.staticflickr.com/65535/53114203313_3bd8227432_b.jpg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.header::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.1);
+    backdrop-filter: blur(var(--blur-strength));
+    z-index: -1;
+}
+
+.logo {
+    width: 50px;
+    height: 50px;
+}
+
+.logo img {
+    border-radius: var(--border-radius);
+}
+
+.navbar a {
+    font-size: 1.15rem;
+    color: var(--color-text);
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 2.5rem;
+}
+
+#navbar-checkbox {
+    display: none;
+}
+
+.icons {
+    position: absolute;
+    right: 5%;
+    font-size: 2.8rem;
+    color: var(--color-text);
+    cursor: pointer;
+    display: none;
 }
 
 html.transition,
@@ -38,4 +98,47 @@ html.transition,
  html.transition *:after {
    transition: all 400ms !important;
    transition-delay: 0 !important;
+}
+
+@media (max-width: 500px) {
+    .icons {
+        display: inline-flex;
+    }
+
+    #navbar-checkbox:checked~.icons #open-nav {
+        display: none;
+    }
+
+    .icons #close-nav {
+        display: none;
+    }
+
+    #navbar-checkbox:checked~.icons #close-nav {
+        display: block;
+    }
+
+    .navbar {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background: rgba(0,0,0,.1);
+        backdrop-filter: blur(var(--blur-strength));
+        box-shadow: 0 0.5rem 1rem rgba(0,0,0,.1);
+        overflow: hidden;
+        transition: .3s ease;
+    }
+
+    #navbar-checkbox:checked~.navbar {
+        height: 10rem;
+    }
+
+    .navbar a {
+        display: block;
+        font-size: 1.1rem;
+        margin: 1.5rem 0;
+        text-align: center;
+        transform: translateY(-20px);
+    }
 }
