--- a/style/style.css
+++ b/style/style.css
@@ -74,7 +74,7 @@ body {
 
 .navbar a {
     font-size: 1.15rem;
-    color: var(--color-text);
+    color: var(--nt-color-text);
     text-decoration: none;
     font-weight: 500;
     margin-left: 2.5rem;
