--- a/style/style.css
+++ b/style/style.css
@@ -88,7 +88,7 @@ body {
     position: absolute;
     right: 5%;
     font-size: 2.8rem;
-    color: var(--color-text);
+    color: var(--nt-color-text);
     cursor: pointer;
     display: none;
 }
