--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,7 @@ body {
     height: 100%;
     background: rgba(0,0,0,.1);
     backdrop-filter: blur(var(--blur-strength));
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
     z-index: -1;
 }
 
@@ -108,6 +109,56 @@ body {
 
 .clock h2 {
     display: none;
+}
+
+.preview-header {
+    position: absolute;
+    display: none;
+}
+
+.projects-preview {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 35%;
+}
+
+.project-card {
+    width: 325px;
+    background: rgba(0,0,0,.1);
+    backdrop-filter: blur(var(--blur-strength));
+    border-radius: var(--border-radius);
+    overflow: hidden;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
+    margin: 20px;
+}
+
+.project-card img {
+    width: 100%;
+    height: auto;
+}
+
+.project-card-content {
+    padding: 16px;
+}
+
+.project-card-content h3 {
+    font-size: 28px;
+    margin-bottom: 8px;
+}
+
+.project-card-content p {
+    font-size: 1;
+    line-height: 1.3;
+}
+
+.read-more-button {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: rgba(0,0,0,.5);
+    text-decoration: none;
+    border-radius: var(--border-radius);
+    margin-top: 16px;
 }
 
 .image-info {
