--- a/style/style.css
+++ b/style/style.css
@@ -60,6 +60,7 @@ body {
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,.1);
+    -webkit-backdrop-filter: blur(var(--blur-strength));
     backdrop-filter: blur(var(--blur-strength));
     box-shadow: 0px 2px 4px rgba(0, 0, 0, .2);
     z-index: -1;
@@ -97,7 +98,7 @@ body {
 
 .clock {
     position: absolute;
-    top: 180px;
+    top: 120px;
     width: 100%;
     text-align: center;
 }
@@ -105,10 +106,6 @@ body {
 .clock h1 {
     font-size: 3rem;
     letter-spacing: 3px;
-}
-
-.clock h2 {
-    display: none;
 }
 
 .preview-header {
@@ -120,12 +117,13 @@ body {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 300px;
+    margin-top: 260px;
 }
 
 .project-card {
     width: 325px;
     background: rgba(0,0,0,.1);
+    -webkit-backdrop-filter: blur(var(--blur-strength));
     backdrop-filter: blur(var(--blur-strength));
     border-radius: var(--border-radius);
     overflow: hidden;
@@ -162,10 +160,12 @@ body {
 }
 
 .image-info {
+    position: fixed;
     bottom: 0;
     left: 0;
     padding-left: 15px;
     padding-bottom: 15px;
+    z-index: -100;
 }
 
 .image-info a {
