--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 1.3rem 5%;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -80,7 +80,8 @@ body {
     color: var(--nt-color-text);
     text-decoration: none;
     font-weight: 500;
-    margin-left: 2.5rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 #navbar-checkbox {
@@ -184,7 +185,7 @@ html.transition,
    transition-delay: 0 !important;
 }
 
-@media (max-width: 550px) {
+@media (max-width: 500px) {
     .icons {
         display: inline-flex;
     }
@@ -208,6 +209,7 @@ html.transition,
         width: 100%;
         height: 0;
         background: rgba(0,0,0,.1);
+        -webkit-backdrop-filter: blur(var(--blur-strength));
         backdrop-filter: blur(var(--blur-strength));
         box-shadow: 0 0.5rem 1rem rgba(0,0,0,.1);
         overflow: hidden;
@@ -215,13 +217,13 @@ html.transition,
     }
 
     #navbar-checkbox:checked~.navbar {
-        height: 15rem;
+        height: 16rem;
     }
 
     .navbar a {
         display: block;
-        font-size: 1.1rem;
-        margin: 1.5rem 0;
+        font-size: 1.3rem;
+        margin: 2rem 0;
         text-align: center;
         transform: translateY(-20px);
     }
