--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -2,10 +2,9 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+    padding-top: 56.25%;
 }
-  
-/* Then style the iframe to fit in the container div with full height and width */
+
 .video-iframe {
     position: absolute;
     top: 0;
@@ -14,8 +13,15 @@
     right: 0;
     width: 100%;
     height: 100%;
+    border-radius: 15px;
 }
 
 .VPImage {
+    border-radius: 15px;
+}
+
+img, video {
+    max-width: 100%;
+    height: auto;
     border-radius: 15px;
 }
